--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
-.cabecalho{
-background-color: rgb(182, 210, 235);
-color: aliceblue;
-display: flex;
-padding: 24px 0;
+.cabecalho {
+    background-color: rgb(182, 210, 235);
+    color: aliceblue;
+    display: flex;
+    padding: 24px 0;
+}
+
+.section1{
+    background-color: rgb(208, 240, 240);
+}
+.section2{
+    background-color: rgb(217, 252, 252);
 }
