--- a/style.css
+++ b/style.css
@@ -7,7 +7,12 @@
 
 .section1{
     background-color: rgb(208, 240, 240);
+    padding: 100px;
 }
 .section2{
     background-color: rgb(217, 252, 252);
+    padding: 100px;
+}
+.cabecalho-imagem{
+    width: 20%;
 }
