--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .cabecalho {
-    background-color: rgb(182, 210, 235);
+    background-image: linear-gradient(white,rgb(199, 228, 245));
     color: aliceblue;
     display: flex;
     padding: 24px 0;
